--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "pg3d-app",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "pnpm run build && git add . && git commit -m 'update' && git push",
+    "startup": "git pull origin main --rebase && npm i && npm run build && npm start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "cheerio": "1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.293.0",
+    "next": "14.1.0",
+    "next-themes": "^0.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-window": "^1.8.10",
+    "sharp": "^0.33.1",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
